--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -58,4 +58,4 @@ markdown_extensions:
       emoji_generator: !!python/name:materialx.emoji.to_svg
 
 copyright: |
-  &copy; 2023 <a href="https://github.com/james-willett"  target="_blank" rel="noopener">James Willett</a>
+  &copy; 2024 <a href="https://github.com/8ft0"  target="_blank" rel="noopener">8ft0</a>
