--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -41,21 +41,17 @@ extra:
 
 
 markdown_extensions:
-  - pymdownx.highlight:
-      anchor_linenums: true
+  - pymdownx.highlight
   - pymdownx.inlinehilite
   - pymdownx.snippets
   - admonition
-  - pymdownx.arithmatex:
-      generic: true
+  - pymdownx.arithmatex
   - footnotes
   - pymdownx.details
   - pymdownx.superfences
   - pymdownx.mark
   - attr_list
-  - pymdownx.emoji:
-      emoji_index: !!python/name:materialx.emoji.twemoji
-      emoji_generator: !!python/name:materialx.emoji.to_svg
+  - pymdownx.emoji
 
 copyright: |
   &copy; 2024 <a href="https://github.com/8ft0"  target="_blank" rel="noopener">8ft0</a>
