--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -58,7 +58,11 @@ markdown_extensions:
   - pymdownx.arithmatex
   - footnotes
   - pymdownx.details
-  - pymdownx.superfences
+  - pymdownx.superfences:
+      custom_fences:
+        - name: mermaid
+          class: mermaid
+          format: !!python/name:pymdownx.superfences.fence_code_format
   - pymdownx.mark
   - attr_list
   - pymdownx.emoji
